modified:   HMSBl/src/credit_bl_servlpml/CreditBlServImpl.java 	modified:   HMSBl/src/helper/UserHelper.java 	modified:   HMSBl/src/manage_bl_serv/ManageBlServ.java 	modified:   HMSBl/src/manage_bl_servlmpl/ManageBlServImpl.java 	modified:   HMSServer/src/datahelper/CreditSqlDataHelper.java 	modified:   HMSWebManagerClient/src/login_ui/AddHotelStaffDialog.fxml 	modified:   HMSWebManagerClient/src/login_ui/AddHotelStaffDialogController.java 	modified:   HMSWebManagerClient/src/login_ui/AddWebSalerDialog.fxml 	modified:   HMSWebManagerClient/src/login_ui/AddWebSalerDialogController.java 	modified:   HMSWebManagerClient/src/login_ui/EditHotelStaff.fxml 	modified:   HMSWebManagerClient/src/login_ui/EditHotelStaffInfoController.java 	modified:   HMSWebManagerClient/src/login_ui/EditMemberInfoDialogController.java 	modified:   HMSWebManagerClient/src/login_ui/EditWebSalerInfo.fxml 	modified:   HMSWebManagerClient/src/login_ui/EditWebSalerInfoController.java 	modified:   HMSWebManagerClient/src/login_ui/HotelStaffManage.fxml 	modified:   HMSWebManagerClient/src/login_ui/HotelStaffManageController.java 	modified:   HMSWebManagerClient/src/login_ui/LoginController.java 	modified:   HMSWebManagerClient/src/login_ui/Main.fxml 	modified:   HMSWebManagerClient/src/login_ui/MainApp.java 	modified:   HMSWebManagerClient/src/login_ui/MainController.java 	modified:   HMSWebManagerClient/src/login_ui/MemberManage.fxml 	modified:   HMSWebManagerClient/src/login_ui/MemberManageController.java 	modified:   HMSWebManagerClient/src/login_ui/WebSalerManage.fxml 	modified:   HMSWebManagerClient/src/login_ui/WebSalerManageController.java 	modified:   HMSWebManagerClient/src/login_ui/property.css 	new file:   HMSWebManagerClient/src/login_ui/testMain.fxml 	modified:   HMSWebSalerClient/src/login_ui/CreditRechargeDialogController.java 	modified:   HMSWebSalerClient/src/login_ui/Login.fxml 	modified:   HMSWebSalerClient/src/login_ui/LoginController.java 	modified:   HMSWebSalerClient/src/login_

--- a/HMSWebManagerClient/src/login_ui/AddHotelStaffDialog.fxml
+++ b/HMSWebManagerClient/src/login_ui/AddHotelStaffDialog.fxml
@@ -22,11 +22,11 @@
             <Label text="酒店名称" />
             <Label text="联系方式" GridPane.rowIndex="3" />
             <TextField fx:id="hotelNameField" GridPane.columnIndex="1" />
-            <TextField fx:id="contactField" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <TextField fx:id="passwordField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <Label text="密码" GridPane.rowIndex="2" />
             <Label text="用户名" GridPane.rowIndex="1" />
             <TextField fx:id="userNameField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <PasswordField fx:id="passwordField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField fx:id="contactField" GridPane.columnIndex="1" GridPane.rowIndex="3" />
          </children>
       </GridPane>
       <Button fx:id="confirm" layoutX="130.0" layoutY="202.0" mnemonicParsing="false" onAction="#handleOk" prefHeight="23.0" prefWidth="89.0" text="确认" />
