--- a/HMSWebManagerClient/src/login_ui/WebSalerManage.fxml
+++ b/HMSWebManagerClient/src/login_ui/WebSalerManage.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="450.0" prefWidth="635.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="login_ui.WebSalerManageController">
+<AnchorPane id="background1" prefHeight="450.0" prefWidth="635.0" stylesheets="@property.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="login_ui.WebSalerManageController">
 	<!-- TODO Add Nodes -->
 	<children>
       <TextField fx:id="inputField" layoutX="128.0" layoutY="58.0" prefHeight="23.0" prefWidth="282.0" promptText="网站营销人员ID" />
