--- a/HMSWebSalerClient/src/login_ui/Main.fxml
+++ b/HMSWebSalerClient/src/login_ui/Main.fxml
@@ -13,7 +13,7 @@
       <ImageView fitHeight="66.0" fitWidth="70.0" layoutX="19.0" layoutY="51.0" pickOnBounds="true" preserveRatio="true" />
       <Label layoutX="19.0" layoutY="26.0" text="Saler Name" />
       <Button fx:id="creditRechargeButton" layoutY="155.0" mnemonicParsing="false" onAction="#showCreditRechargePane" prefHeight="35.0" prefWidth="107.0" text="信用充值" />
-      <Button fx:id="orderCheckButton" layoutY="190.0" mnemonicParsing="false" onAction="#showorderCheckPane" prefHeight="35.0" prefWidth="107.0" text="订单查看" />
+      <Button fx:id="orderCheckButton" layoutY="190.0" mnemonicParsing="false" onAction="#showOrderCheckPane" prefHeight="35.0" prefWidth="107.0" text="订单查看" />
       <Button fx:id="webStrategyButton" layoutY="225.0" mnemonicParsing="false" onAction="#showWebStrategyPane" prefHeight="35.0" prefWidth="107.0" text="促销策略" />
       <Separator layoutX="107.0" orientation="VERTICAL" prefHeight="450.0" prefWidth="6.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="107.0" AnchorPane.topAnchor="0.0" />
       <AnchorPane fx:id="creditRechargePane" layoutX="107.0" prefHeight="200.0" prefWidth="200.0">
