--- a/HMSWebSalerClient/src/login_ui/WebStrategy.fxml
+++ b/HMSWebSalerClient/src/login_ui/WebStrategy.fxml
@@ -9,7 +9,7 @@
 
 <AnchorPane prefHeight="450.0" prefWidth="635.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="login_ui.WebStrategyController">
    <children>
-      <AnchorPane fx:id="OrderTable" layoutX="4.0" layoutY="52.0" prefHeight="347.0" prefWidth="614.0">
+      <AnchorPane fx:id="webStrategyTable" layoutX="4.0" layoutY="52.0" prefHeight="347.0" prefWidth="614.0">
          <children>
             <fx:include source="WebStrategyTableUI.fxml" />
          </children>
