modified:   HMSBl/src/VO/StrategyVO.java 	modified:   HMSBl/src/credit_bl_servlpml/CreditBlServImpl.java 	modified:   HMSBl/src/helper/ParseHelper.java 	modified:   HMSBl/src/strategy_bl_serv/WebStrategyBlServ.java 	modified:   HMSBl/src/strategy_bl_servlmpl/WebStrategyBlServlmpl.java 	modified:   HMSWebManagerClient/src/login_ui/EditHotelStaffInfoController.java 	modified:   HMSWebManagerClient/src/login_ui/EditWebSalerInfoController.java 	modified:   HMSWebManagerClient/src/login_ui/LoginController.java 	modified:   HMSWebManagerClient/src/login_ui/MainApp.java 	deleted:    HMSWebManagerClient/src/webmanager_main_ui/WebManagerMainApp.java 	modified:   HMSWebSalerClient/src/login_ui/CreditRecharge.fxml 	modified:   HMSWebSalerClient/src/login_ui/CreditRechargeController.java 	modified:   HMSWebSalerClient/src/login_ui/LoginController.java 	modified:   HMSWebSalerClient/src/login_ui/Main.fxml 	modified:   HMSWebSalerClient/src/login_ui/MainApp.java 	modified:   HMSWebSalerClient/src/login_ui/MainController.java 	modified:   HMSWebSalerClient/src/login_ui/OrderDetailsController.java 	modified:   HMSWebSalerClient/src/login_ui/OrderTableController.java 	modified:   HMSWebSalerClient/src/login_ui/StrategyCBDEdit.fxml 	modified:   HMSWebSalerClient/src/login_ui/StrategyCBDEditController.java 	modified:   HMSWebSalerClient/src/login_ui/StrategydateAddController.java 	modified:   HMSWebSalerClient/src/login_ui/StrategydateEdit.fxml 	modified:   HMSWebSalerClient/src/login_ui/StrategydateEditController.java 	modified:   HMSWebSalerClient/src/login_ui/WebStrategyController.java 	modified:   HMSWebSalerClient/src/login_ui/WebStrategyTableController.java

--- a/HMSWebSalerClient/src/login_ui/StrategydateEdit.fxml
+++ b/HMSWebSalerClient/src/login_ui/StrategydateEdit.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="275.0" prefWidth="435.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="login_ui.StrategydateAddController">
+<AnchorPane prefHeight="275.0" prefWidth="435.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="login_ui.StrategydateEditController">
    <children>
       <GridPane layoutX="122.0" layoutY="37.0" prefHeight="165.0" prefWidth="200.0">
         <columnConstraints>
@@ -23,13 +23,13 @@
             <Label text="起始时间" GridPane.rowIndex="1" />
             <Label text="结束时间" GridPane.rowIndex="2" />
             <Label text="折扣额" GridPane.rowIndex="3" />
-            <TextField fx:id="nameField" GridPane.columnIndex="1" />
-            <DatePicker fx:id="begin" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <DatePicker fx:id="end" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField fx:id="nameField" editable="false" GridPane.columnIndex="1" />
+            <DatePicker fx:id="startTimePicker" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <DatePicker fx:id="endTimePicker" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <TextField fx:id="discountField" GridPane.columnIndex="1" GridPane.rowIndex="3" />
          </children>
       </GridPane>
-      <Button fx:id="confirm" layoutX="111.0" layoutY="238.0" mnemonicParsing="false" onAction="#handleOK" prefHeight="23.0" prefWidth="73.0" text="保存更改" />
-      <Button fx:id="cancel" layoutX="260.0" layoutY="238.0" mnemonicParsing="false" onAction="#giveup" prefHeight="23.0" prefWidth="73.0" text="返回" />
+      <Button fx:id="confirm" layoutX="111.0" layoutY="238.0" mnemonicParsing="false" onAction="#onSaveClicked" prefHeight="23.0" prefWidth="73.0" text="保存更改" />
+      <Button fx:id="cancel" layoutX="260.0" layoutY="238.0" mnemonicParsing="false" onAction="#onReturnClicked" prefHeight="23.0" prefWidth="73.0" text="返回" />
    </children>
 </AnchorPane>
