--- a/HMSWebSalerClient/src/login_ui/CreditRecharge.fxml
+++ b/HMSWebSalerClient/src/login_ui/CreditRecharge.fxml
@@ -12,7 +12,7 @@
 	<children>
       <TextField fx:id="inputField" layoutX="191.0" layoutY="60.0" prefHeight="23.0" prefWidth="174.0" promptText="用户ID" />
       <Button fx:id="search" layoutX="427.0" layoutY="60.0" mnemonicParsing="false" onAction="#search" prefHeight="23.0" prefWidth="68.0" text="搜索" />
-      <AnchorPane fx:id="infoPane" layoutX="127.0" layoutY="120.0" prefHeight="269.0" prefWidth="398.0">
+      <AnchorPane fx:id="infoPane" layoutX="127.0" layoutY="120.0" prefHeight="269.0" prefWidth="398.0" AnchorPane.topAnchor="120.0">
          <children>
             <GridPane layoutX="110.0" layoutY="50.0" prefHeight="147.0" prefWidth="189.0">
               <columnConstraints>
