--- a/HMSWebSalerClient/src/login_ui/Main.fxml
+++ b/HMSWebSalerClient/src/login_ui/Main.fxml
@@ -11,7 +11,7 @@
 	<!-- TODO Add Nodes -->
 	<children>
       <ImageView fitHeight="66.0" fitWidth="70.0" layoutX="19.0" layoutY="51.0" pickOnBounds="true" preserveRatio="true" />
-      <Label layoutX="19.0" layoutY="26.0" text="Saler Name" />
+      <Label fx:id="nameLabel" layoutX="19.0" layoutY="26.0" />
       <Button fx:id="creditRechargeButton" layoutY="155.0" mnemonicParsing="false" onAction="#showCreditRechargePane" prefHeight="35.0" prefWidth="107.0" text="信用充值" />
       <Button fx:id="orderCheckButton" layoutY="190.0" mnemonicParsing="false" onAction="#showOrderCheckPane" prefHeight="35.0" prefWidth="107.0" text="订单查看" />
       <Button fx:id="webStrategyButton" layoutY="225.0" mnemonicParsing="false" onAction="#showWebStrategyPane" prefHeight="35.0" prefWidth="107.0" text="促销策略" />
