modified:   HMSBl/src/helper/OrderHelper.java 	modified:   HMSBl/src/helper/ParseHelper.java 	modified:   HMSBl/src/order_bl_servlmpl/OrderBlServImpl.java 	modified:   HMSWebManagerClient/src/login_ui/EditWebSalerInfoController.java 	modified:   HMSWebManagerClient/src/login_ui/LoginController.java 	modified:   HMSWebManagerClient/src/login_ui/MainApp.java 	modified:   HMSWebSalerClient/src/login_ui/CreditRechargeController.java 	modified:   HMSWebSalerClient/src/login_ui/CreditRechargeDialogController.java 	modified:   HMSWebSalerClient/src/login_ui/LoginController.java 	modified:   HMSWebSalerClient/src/login_ui/MainApp.java 	modified:   HMSWebSalerClient/src/login_ui/MainController.java 	modified:   HMSWebSalerClient/src/login_ui/OrderDetailsController.java 	modified:   HMSWebSalerClient/src/login_ui/OrderDetailsUI.fxml 	modified:   HMSWebSalerClient/src/login_ui/OrderInfoController.java 	modified:   HMSWebSalerClient/src/login_ui/OrderTableController.java 	modified:   HMSWebSalerClient/src/login_ui/StrategyCBDAddController.java 	modified:   HMSWebSalerClient/src/login_ui/StrategyCBDEditController.java 	new file:   HMSWebSalerClient/src/login_ui/StrategyLevelAdd.fxml 	new file:   HMSWebSalerClient/src/login_ui/StrategyLevelAddController.java 	new file:   HMSWebSalerClient/src/login_ui/StrategyLevelEdit.fxml 	new file:   HMSWebSalerClient/src/login_ui/StrategyLevelEditController.java 	modified:   HMSWebSalerClient/src/login_ui/StrategydateAddController.java 	modified:   HMSWebSalerClient/src/login_ui/StrategydateEditController.java 	modified:   HMSWebSalerClient/src/login_ui/WebStrategy.fxml 	modified:   HMSWebSalerClient/src/login_ui/WebStrategy.java 	modified:   HMSWebSalerClient/src/login_ui/WebStrategyController.java 	modified:   HMSWebSalerClient/src/login_ui/WebStrategyTableController.java

--- a/HMSWebSalerClient/src/login_ui/OrderDetailsUI.fxml
+++ b/HMSWebSalerClient/src/login_ui/OrderDetailsUI.fxml
@@ -48,7 +48,7 @@
       <Label layoutX="184.0" layoutY="411.0" text="折后价" />
       <Label fx:id="totallabel" layoutX="281.0" layoutY="411.0" text="Label" />
       <Button fx:id="halfButton" layoutX="37.0" layoutY="443.0" mnemonicParsing="false" onAction="#resumeHalf" text="恢复一半信用值" />
-      <Button fx:id="closeButton" layoutX="272.0" layoutY="443.0" mnemonicParsing="false" onAction="#comment" text="返回" />
-      <Button fx:id="allButton" layoutX="155.0" layoutY="443.0" mnemonicParsing="false" onAction="#resumrAll" text="恢复全部信用值" />
+      <Button fx:id="closeButton" layoutX="272.0" layoutY="443.0" mnemonicParsing="false" onAction="#giveup" text="返回" />
+      <Button fx:id="allButton" layoutX="155.0" layoutY="443.0" mnemonicParsing="false" onAction="#resumeAll" text="恢复全部信用值" />
    </children>
 </AnchorPane>
